# bird-identification

./: pyproject.toml
POC/: classifier_pycoral.py  run_test_classifier.sh  test_classifier.py
