[project]
name = "bird-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.2.post1",
    "matplotlib>=3.9.4",
    "numpy<2",
    "pycoral>=0.2.0",
    "pyyaml>=6.0.2",
    "rasterio>=1.4.3",
    "tensorflow==2.14.0",
]
